[gd_scene load_steps=4 format=3 uid="uid://nxd473444gs2"]

[ext_resource type="Script" uid="uid://dsom4tjk8086y" path="res://TheHostage/STAGE2/Puzzle/Piano/white/white_2.gd" id="1_6s31s"]
[ext_resource type="Texture2D" uid="uid://tqrag26pi880" path="res://assets/TheHostage/2D/piano/mouse_entered_white/3.png" id="2_ffsfo"]
[ext_resource type="Texture2D" uid="uid://pwhpowxi6cvg" path="res://assets/TheHostage/2D/piano/click_white/1.png" id="3_ccq3b"]

[node name="White2" type="Node2D"]
script = ExtResource("1_6s31s")

[node name="enter" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ffsfo")

[node name="click" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ccq3b")

[node name="area" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="area"]
polygon = PackedVector2Array(0, 2, 31, 2, 31, 207, 46, 207, 46, 393, 0, 393)

[connection signal="input_event" from="area" to="." method="_on_area_input_event"]
[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_area_mouse_exited"]
